--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/prism.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="gridtab/gridtab.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="http://localhost:3000/en/styles/gridtab-theme.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/gridtab-theme.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
