--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
 
       <div class="inner">
-
+<div class="header_wrap">
         <header>
           <div class="brand">
           <span>JQUERY <i>
@@ -81,6 +81,7 @@ PLUGIN</span>
               <li><a href="#settings">Settings</a></li>
           </nav>
         </header>
+      </div>
 
         <div class="container">
         <!-- <section id="downloads" class="clearfix">
