--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         font-family:Arial;
       }
       .container{
-        max-width:1200px;
+        max-width:960px;
         margin:0 auto;
         padding:50px 0;
       }
@@ -23,7 +23,7 @@
     <!-- Site header starts here-->
     <!-- Site header ends here-->
     <div class="container">
-      <h1>Responsive Grid Layout</h1>
+      <h1>Responsive grid layout</h1>
       <dl class="gridtab-1">
         <dt><img src="http://placehold.it/350x300?text=1"></dt>
         <dd>1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
@@ -51,7 +51,7 @@
         <dd>12 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
       </dl>
       <hr>
-      <h1>Responsive Tab Layout</h1>
+      <h1>Responsive tab layout</h1>
       <dl class="gridtab-2">
         <dt>Tab 1</dt>
         <dd>1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
@@ -79,10 +79,85 @@
         <dd>12 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
       </dl>
       <hr>
-      <h1>Initially Active Tab</h1>
+      <h1>Initially active tab & custom controls (next/prev and close)</h1>
       <dl class="gridtab-3">
         <dt>Tab 1</dt>
         <dd>1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt>Tab 2</dt>
+        <dd>2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt>Tab 3</dt>
+        <dd>3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+      </dl>
+      <hr>
+      <h1>Scroll to active tab</h1>
+      <dl class="gridtab-4">
+        <dt><img src="http://placehold.it/350x300?text=1"></dt>
+        <dd>1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=2"></dt>
+        <dd>2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=3"></dt>
+        <dd>3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=4"></dt>
+        <dd>4 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=5"></dt>
+        <dd>5 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=6"></dt>
+        <dd>6 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=7"></dt>
+        <dd>7 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=8"></dt>
+        <dd>8 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=9"></dt>
+        <dd>9 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=10"></dt>
+        <dd>10 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=11"></dt>
+        <dd>11 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt><img src="http://placehold.it/350x300?text=12"></dt>
+        <dd>12 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+      </dl>
+      <hr>
+      <h1>Keep tab open</h1>
+      <dl class="gridtab-5">
+        <dt>Tab 1</dt>
+        <dd>1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt>Tab 2</dt>
+        <dd>2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+        <dt>Tab 3</dt>
+        <dd>3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+      </dl>
+      <hr>
+      <h1>Nested GridTabs</h1>
+      <dl class="gridtab-6">
+        <dt>Tab 1</dt>
+        <dd>
+          <dl class="gridtab-1">
+            <dt><img src="http://placehold.it/350x300?text=1"></dt>
+            <dd>1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=2"></dt>
+            <dd>2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=3"></dt>
+            <dd>3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=4"></dt>
+            <dd>4 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=5"></dt>
+            <dd>5 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=6"></dt>
+            <dd>6 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=7"></dt>
+            <dd>7 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=8"></dt>
+            <dd>8 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=9"></dt>
+            <dd>9 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=10"></dt>
+            <dd>10 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=11"></dt>
+            <dd>11 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+            <dt><img src="http://placehold.it/350x300?text=12"></dt>
+            <dd>12 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
+          </dl>
+        </dd>
         <dt>Tab 2</dt>
         <dd>2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sodales vitae massa mattis auctor. Mauris erat metus, cursus tincidunt leo sit amet, condimentum sollicitudin quam. Sed pharetra non nibh aliquam vulputate. Nullam dui dolor, venenatis sit amet diam nec, commodo sollicitudin augue.</dd>
         <dt>Tab 3</dt>
@@ -96,10 +171,8 @@
     <script src="gridtab/gridtab.min.js"></script>
     <script>
       $(document).ready(function() {
-
           $('.gridtab-1').gridtab({
               grid: 6,
-              layout: 'grid',
               tabPadding: 0,
               borderWidth: 10,
               contentPadding: 40,
@@ -118,16 +191,17 @@
               }, {
                   breakpoint: 520,
                   settings: {
-                      grid: 2,
-                      contentPadding: 20
+                      grid: 2
                   }
               }]
           });
 
+
           $('.gridtab-2').gridtab({
               grid: 4,
-              keepOpen: true,
-              layout: 'tab',
+              config:{
+                layout: 'tab'
+              },
               callbacks: {
                   open: function() {
                       console.log('open');
@@ -139,6 +213,7 @@
               responsive: [{
                   breakpoint: 991,
                   settings: {
+
                       grid: 3,
                   }
               }, {
@@ -155,8 +230,62 @@
           });
           $('.gridtab-3').gridtab({
               grid: 3,
-              activeTab: 2,
-              layout: 'tab'
+              config:{
+                layout:'tab',
+                activeTab:1,
+                showClose:true,
+                showArrows:true,
+              }
+          });
+
+          $('.gridtab-4').gridtab({
+              grid: 6,
+              tabPadding: 0,
+              borderWidth: 10,
+              contentPadding: 40,
+              config:{
+                scrollToTab:true,
+                showClose:true,
+                showArrows:true
+              },
+              responsive: [{
+                  breakpoint: 991,
+                  settings: {
+                      grid: 4,
+                      contentPadding: 30
+                  }
+              }, {
+                  breakpoint: 767,
+                  settings: {
+                      grid: 3,
+                  }
+              }, {
+                  breakpoint: 520,
+                  settings: {
+                      grid: 2
+                  }
+              }]
+          });
+          $('.gridtab-5').gridtab({
+              grid: 3,
+              config:{
+                layout:'tab',
+                activeTab:1,
+                keepOpen:true,
+                showClose:true,
+                showArrows:true,
+                scrollToTab:true,
+              }
+          });
+          $('.gridtab-6').gridtab({
+              grid: 3,
+              config:{
+                layout:'tab',
+                activeTab:1,
+                showClose:true,
+                showArrows:true,
+                scrollToTab:true,
+              }
           });
       });
     </script>
