Added meta tags and images for social media sharing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,  maximum-scale=1.0, user-scalable=no">
+    <meta property="og:title" content="Gridtab jQuery plugin">
+    <meta property="og:description" content="A jQuery plugin to create grid based responsive tabs.">
+    <meta property="og:image" content="../images/gridtab_fb.jpg">
+    <meta property="og:url" content="https://gopalraju.github.io/gridtab">
+    <meta name="twitter:title" content="Gridtab jQuery plugin">
+    <meta name="twitter:description" content=" A jQuery plugin to create grid based responsive tabs.">
+    <meta name="twitter:image" content=" ../images/gridtab_tw.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@gopalraju" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Sansita+One|Roboto:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/prism.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
@@ -13,7 +22,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Gridtab by gopalraju</title>
+    <title>Gridtab jQuery Plugin - Grid Based Responsive Tabs</title>
   </head>
 
   <body>
