--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         margin:50px 0;
       }
     </style>
-    <link rel="stylesheet" href="gridtab/gridtab.css">
+    <link rel="stylesheet" href="gridtab/gridtab.min.css">
   </head>
   <body>
     <!-- Site header starts here-->
