--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,  maximum-scale=1.0, user-scalable=no">
     <meta property="og:title" content="Gridtab jQuery plugin">
     <meta property="og:description" content="A jQuery plugin to create grid based responsive tabs.">
-    <meta property="og:image" content="images/gridtab_fb.jpg">
+    <meta property="og:image" content="https://gopalraju.github.io/gridtab/images/gridtab_fb.jpg">
     <meta property="og:url" content="https://gopalraju.github.io/gridtab">
     <meta name="twitter:title" content="Gridtab jQuery plugin">
     <meta name="twitter:description" content=" A jQuery plugin to create grid based responsive tabs.">
-    <meta name="twitter:image" content=" images/gridtab_tw.jpg">
+    <meta name="twitter:image" content="https://gopalraju.github.io/gridtab/images/gridtab_tw.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@gopalraju" />
     <link href='https://fonts.googleapis.com/css?family=Montserrat|Sansita+One|Roboto:400,700' rel='stylesheet' type='text/css'>
