Added bower and npm installation info

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ PLUGIN</span>
   <li>Custom selectors</li>
   <li>Right-To-Left Support</li>
 </ul>
+
 </section>
 
 <section>
@@ -800,6 +801,17 @@ PLUGIN</span>
 
 
 </div>
+
+<h5>Package Managers</h5>
+<pre>
+  <code class="language-basic">
+    # Bower
+    bower install --save gridtab
+
+    # NPM
+    npm install gridtab
+  </code>
+</pre>
 
 </section>
 <section>
